sgd/reproduction/playground/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccountPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>アカウントプラン</label>
        <referenceTo>AccountPlan__c</referenceTo>
        <relationshipLabel>取引先</relationshipLabel>
        <relationshipName>AccountPlan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>削除市区郡町名・番地</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CSM_SFDC_RuisekiLost_Amount__c</fullName>
        <label>累積失注金額</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSJP__fs_company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>【FORCAS】FORCAS企業</label>
        <referenceTo>FSJP__f_company__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lank__c</fullName>
        <label>顧客ランク</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                    <color>#641CCF</color>
                    <label>S</label>
                </value>
                <value>
                    <fullName>A</fullName>
                    <color>#A845DC</color>
                    <label>A</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <color>#78C953</color>
                    <label>B</label>
                </value>
                <value>
                    <fullName>C</fullName>
                    <color>#33CCFF</color>
                    <label>C</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <color>#FF0000</color>
                    <label>D</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MarketoFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MarketoFlg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PostNumber__c</fullName>
        <label>削除郵便番号</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pref__c</fullName>
        <label>削除都道府県</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ruisekisei_yaku_kaisuu__c</fullName>
        <inlineHelpText>今までの成約回数。
成立フラグが立っている商談の合計数</inlineHelpText>
        <label>累積成約回数</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SFDC_RuisekiClose_Amount__c</fullName>
        <inlineHelpText>今までの成約金額。 
成立フラグが立っている商談の合計金額</inlineHelpText>
        <label>累積成約金額</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_CustomerCd__c</fullName>
        <externalId>true</externalId>
        <label>SAP得意先コード</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SMAX_PS_Customer_Priority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_LinktoGEOPlus__c</fullName>
        <label>GEO Plus顧客データベースリンク</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Payment_Terms__c</fullName>
        <label>﻿HTS支払条件</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_PurchaseOrg__c</fullName>
        <label>SAP購買グループ</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_VendorCd__c</fullName>
        <label>SAP仕入先コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SoldtoFlag__c</fullName>
        <label>SAP注文主設定</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_SalesOrg</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Access_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Access Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Do Not Use)</description>
        <inlineHelpText>(Do Not Use)</inlineHelpText>
        <label>Business Hours (Do Not Use)</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Accounts (Business Hours)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude__c</fullName>
        <description>Address location north or south of the equator.</description>
        <inlineHelpText>Address location north or south of the equator.</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude__c</fullName>
        <description>East west geographic coordinate measurement.</description>
        <inlineHelpText>East west geographic coordinate measurement.</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_ID__c</fullName>
        <description>External System Unique ID</description>
        <externalId>true</externalId>
        <inlineHelpText>External System Unique ID</inlineHelpText>
        <label>External Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCardFreehandmemo__c</fullName>
        <label>名刺手書きメモ</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCardListName__c</fullName>
        <inlineHelpText>名刺から取り込んだ時のリスト名</inlineHelpText>
        <label>名刺リスト名</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCardMemo__c</fullName>
        <label>名刺メモ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmartViscaf__NameCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>名刺</label>
        <referenceTo>SmartViscaf__NameCard__c</referenceTo>
        <relationshipLabel>取引先</relationshipLabel>
        <relationshipName>AccountNameCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Category_del__c</fullName>
        <label>Team Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Business Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AccountLead</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Pref__c</columns>
        <columns>Address__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>30_得意先（名刺情報）</label>
        <sharedTo>
            <group>STEC_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>Team_Category_del__c</columns>
        <columns>Lank__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>PostNumber__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Address__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Team_Category_del__c</field>
            <operation>contains</operation>
            <value>A1</value>
        </filters>
        <filters>
            <field>Lank__c</field>
            <operation>contains</operation>
            <value>S,A</value>
        </filters>
        <label>00_すべての取引先</label>
        <sharedTo>
            <group>STEC_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Address__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.AccountType</value>
        </filters>
        <label>10_私の取引先</label>
        <sharedTo>
            <group>SMAX_PS_HTS_Account_R_W</group>
            <group>STEC_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>Lank__c</columns>
        <columns>Team_Category_del__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>今週の新規取引先</label>
    </listViews>
    <listViews>
        <fullName>No_Activity_30Days</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.LAST_ACTIVITY</field>
            <operation>lessThan</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>30日以上未活動の取引先</label>
        <sharedTo>
            <group>STEC_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SMAX_PS_All_Partners</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.SMAX_PS_Account</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>仕入先</value>
        </filters>
        <label>HTS　すべての仕入先</label>
        <sharedTo>
            <group>SMAX_PS_HTS_Account_R_W</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SMAX_PS_HTS_All_Customers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>SMAX_PS_CustomerCd__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.SMAX_PS_Account</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>顧客,パートナー,代理店,HORIBA</value>
        </filters>
        <label>HTS　すべての取引先</label>
        <sharedTo>
            <group>SMAX_PS_HTS_Account_R_W</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>View</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>すべて</label>
    </listViews>
    <recordTypes>
        <fullName>AccountType</fullName>
        <active>true</active>
        <description>取引のある得意先</description>
        <label>得意先</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMAX_PS_Account</fullName>
        <active>true</active>
        <label>SVMX Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Account_BillingAddress_Mandatoryfields</fullName>
        <active>true</active>
        <description>取引先の住所(請求書)を必須にします。
都道府県もしくは市区郡が空白の際に、保存が出来ないようになります。</description>
        <errorConditionFormula>OR (
ISBLANK( BillingState ) ,
ISBLANK( BillingCity )
)</errorConditionFormula>
        <errorMessage>都道府県もしくは市区郡が空白です。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Account_Mastered_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
    NOT(ISNULL(SMAX_PS_CustomerCd__c)),
    NOT(ISBLANK(SMAX_PS_CustomerCd__c)),
    RecordType.DeveloperName = &apos;SMAX_PS_Account&apos;,
    $Profile.Name &lt;&gt; &apos;システム管理者(ベンダー)&apos;,
    $Profile.Name &lt;&gt; &apos;システム管理者&apos;,
    $Profile.Name &lt;&gt; &apos;ServiceMax Background User&apos;,
    OR
    (
        ISCHANGED(SMAX_PS_CustomerCd__c),
        ISCHANGED(SMAX_PS_SoldtoFlag__c),
        ISCHANGED(Name),
        ISCHANGED(BillingStreet),
        ISCHANGED(BillingCity),
        ISCHANGED(BillingState),
        ISCHANGED(BillingCountry),
        ISCHANGED(BillingPostalCode),
        ISCHANGED(Phone),
        ISCHANGED(Fax)
    )
)</errorConditionFormula>
        <errorMessage>SAP管理の取引先なのでSAPにて編集ください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Account_Mastered_Validation_BkUp</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
    NOT(ISNULL(SMAX_PS_CustomerCd__c)),
    NOT(ISBLANK(SMAX_PS_CustomerCd__c)),
    RecordType.DeveloperName = &apos;SMAX_PS_Account&apos;,
    $Profile.Name &lt;&gt; &apos;システム管理者(ベンダー)&apos;,
    $Profile.Name &lt;&gt; &apos;ServiceMax Background User&apos;,
    OR
    (
        ISCHANGED(SMAX_PS_CustomerCd__c),
        ISCHANGED(SMAX_PS_SoldtoFlag__c),
        ISCHANGED(BillingStreet),
        ISCHANGED(BillingCity),
        ISCHANGED(BillingState),
        ISCHANGED(BillingCountry),
        ISCHANGED(BillingPostalCode),
        ISCHANGED(Phone),
        ISCHANGED(Fax)
    )
)</errorConditionFormula>
        <errorMessage>SAP管理の取引先なのでSAPにて編集ください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_New_Account_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
ISNEW(),
NOT(ISNULL(SMAX_PS_CustomerCd__c)),
NOT(ISBLANK(SMAX_PS_CustomerCd__c)),
RecordType.DeveloperName = &apos;SMAX_PS_Account&apos;,
$Profile.Name &lt;&gt; &apos;システム管理者(ベンダー)&apos;,
$Profile.Name &lt;&gt; &apos;システム管理者&apos;,
$Profile.Name &lt;&gt; &apos;ServiceMax Background User&apos;
)</errorConditionFormula>
        <errorMessage>SAP管理の取引先をSAPにて新規登録ください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_New_Account_Validation_BkUp</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
ISNEW(),
NOT(ISNULL(SMAX_PS_CustomerCd__c)),
NOT(ISBLANK(SMAX_PS_CustomerCd__c)),
RecordType.DeveloperName = &apos;SMAX_PS_Account&apos;,
$Profile.Name &lt;&gt; &apos;システム管理者(ベンダー)&apos;,
$Profile.Name &lt;&gt; &apos;ServiceMax Background User&apos;
)</errorConditionFormula>
        <errorMessage>SAP管理の取引先をSAPにて新規登録ください。</errorMessage>
    </validationRules>
</CustomObject>